--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,24 +19,34 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-grow: 1;
 }
 
-html  {
+body  {
   font-size: 16px;
+  font-family: Times, sans-serif;
+  line-height: 1.4;
 }
 
 /*Header Styles*/
 
-.head {
+header {
+  width: 100%;
   height: 4rem;
-  z-index: 1;
+  display: flex;
+  justify-content: center;
   position: fixed;
+  z-index: 1;
+}
+
+.head {
+  max-height: 4rem;
 }
 
 .logo {
   display: flex;
   height: 2rem;
-  padding-left: 1.5rem;
+  margin-left: 1.5rem;
   align-items: center;
 }
 
@@ -46,7 +56,8 @@ html  {
 
 .navigation ul li{
   display: inline-block;
-  margin-left: 1rem;
+  padding: 1rem;
+  margin-right: 0.5rem;
 }
 
 .name {
