--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,7 +25,7 @@ footer {
 body  {
   font-size: 16px;
   font-family: Times, sans-serif;
-  line-height: 1.4;
+  line-height: 1rem;
 }
 
 /*Header Styles*/
@@ -37,6 +37,7 @@ header {
   justify-content: center;
   position: fixed;
   z-index: 1;
+  background-color: white;
 }
 
 .head {
@@ -56,10 +57,42 @@ header {
 
 .navigation ul li{
   display: inline-block;
-  padding: 1rem;
+  padding: 0 1rem;
   margin-right: 0.5rem;
 }
 
-.name {
+/*Main Styles*/
+main {
+  position: relative;
+  top: 4rem;
+  border: 2px solid green;
+}
 
+.banner img {
+  padding: 2rem 1.5rem;
+  width: 60%;
+}
+
+#banner1 {
+  background-color: lightgray;
+}
+
+#banner1 .button {
+  padding: 0.5rem 0;
+  width: 50%;
+  color: white;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  width: 100%;
+  text-align: left;
+  line-height: 1.6;
+}
+
+.description .button {
+  background-color: gray;
+  text-align: center;
 }
