--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,9 +17,10 @@ footer {
 .container {
   border: 3px dashed blue;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-grow: 1;
+  flex-shrink: 1;
 }
 
 body  {
@@ -32,10 +33,11 @@ body  {
 /*Header Styles*/
 
 header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 4rem;
-  display: flex;
-  justify-content: center;
   position: fixed;
   z-index: 1;
   background-color: white;
@@ -131,4 +133,34 @@ main {
   color: white;
   text-align: center;
   padding: 0.5rem 0;
+}
+
+.courses {
+  background-color: lightgray;
+}
+
+.class {
+  padding: 0 5rem 2rem 6rem;
+}
+
+.department {
+  width: 100%;
+  height: 100%;
+  margin: 1rem;
+  border: 2px solid green;
+}
+
+.department img {
+  width: 100%;
+}
+
+.courses h1 {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.course-desc {
+  background-color: white;
+  height: 100%;
+  padding-bottom: 1.5rem;
 }
