--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,8 +19,6 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
-  flex-shrink: 1;
 }
 
 body  {
@@ -71,13 +69,22 @@ main {
   border: 2px solid green;
 }
 
+.sect-head {
+  padding: 2rem 0;
+  text-align: center;
+}
+
 .left-section {
   width: 60%;
-  padding: 2rem 1.5rem;
+  padding: 0 1.5rem;
 }
 
 .left-section img {
   max-width: 100%;
+}
+
+.left-section video {
+  width: 100%;
 }
 
 .right-section {
@@ -92,6 +99,10 @@ main {
   align-items: flex-start;
 }
 
+#information .left-section {
+  padding: 1rem 1.5rem;
+}
+
 #information h2 {
   margin: 0.5rem 0;
 }
@@ -100,7 +111,7 @@ main {
   margin: 2rem 0 1.5rem 0;
 }
 
-#information .right-section {
+#information .right-section img {
   padding-top: 1rem;
 }
 
@@ -110,7 +121,7 @@ main {
 
 .right-section img {
   width: 35%;
-  padding: 1rem;
+  padding: 0 1rem 1rem 1rem;
 }
 
 .info {
@@ -140,12 +151,11 @@ main {
 }
 
 .class {
-  padding: 0 5rem 2rem 6rem;
+  padding: 0 5rem;
 }
 
 .department {
   width: 100%;
-  height: 100%;
   margin: 1rem;
   border: 2px solid green;
 }
@@ -154,13 +164,12 @@ main {
   width: 100%;
 }
 
-.courses h1 {
-  padding: 2rem 0;
-  text-align: center;
-}
-
 .course-desc {
   background-color: white;
   height: 100%;
   padding-bottom: 1.5rem;
+}
+
+.thesis .right-section {
+  align-self: flex-start;
 }
